http to https in index file

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     <meta name="viewport" id="viewport" content="initial-scale=1.0, maximum-scale=1.0, user-scalable=no, minimal-ui">
 
     <meta property="og:title" content="Bo.">
-    <meta property="og:url" content="http://www.SayHelloToBo.com">
+    <meta property="og:url" content="https://www.SayHelloToBo.com">
     <meta property="og:type" content="article">
-    <!-- <meta property="og:image" content="http://www.SayHelloToBo.com/images/image.png"> -->
+    <!-- <meta property="og:image" content="https://www.SayHelloToBo.com/images/image.png"> -->
     <meta property="og:description" content="Hello, my name is Bo.">
     <meta property="og:site_name" content="Bo.">
     
