--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                     Over the years I have acquired skills and experience to do this work effectively, but I'm also continuously updating my techniques and customizing my methods to accommodate the different teams I'm working with. Feel free to contact me to discuss how I would specifically <a href="mailto:ContactMe@SayHelloToBo.com" class="link underline dim pa0 ma0">work with your team</a>. And, in general, you might notice some of these while working with me:
                 </p>
                 
-                <dl class="lh-title pa3 pa5-ns mt0">
+                <dl class="lh-title pa3 pa4-m pa5-l mt0">
                   <dt class="f3 b">Agile</dt>
                   <dd class="f4 ml0">Agile-ish techniques</dd>
                   <dt class="f3 b mt2">Human-Centered Design</dt>
