--- a/index.html
+++ b/index.html
@@ -86,21 +86,21 @@
                     Over the years I have acquired skills and experience to do this work effectively, but I'm also continuously updating my techniques and customizing my methods to accommodate the different teams I'm working with. Feel free to contact me to discuss how I would specifically <a href="mailto:ContactMe@SayHelloToBo.com" class="link underline dim pa0 ma0">work with your team</a>. And, in general, you might notice some of these while working with me:
                 </p>
                 
-                <dl class="lh-title pa3 pa4-m pa5-l mt0">
-                  <dt class="f3 b">Agile</dt>
-                  <dd class="f4 ml0">Agile-ish techniques</dd>
-                  <dt class="f3 b mt2">Human-Centered Design</dt>
-                  <dd class="f4 ml0">Principles and Methods</dd>
-                  <dt class="f3 b mt2">Project Management</dt>
-                  <dd class="f4 ml0">Prioritization, Coordination, Planning</dd>
-                  <dt class="f3 b mt2">Story Mapping</dt>
-                  <dd class="f4 ml0">Visual Backlogs</dd>
-                  <dt class="f3 b mt2">Value Mapping</dt>
-                  <dd class="f4 ml0">Shared Understanding of Value</dd>
-                  <dt class="f3 b mt2">Visual Modeling</dt>
-                  <dd class="f4 ml0">Wireframing, Whiteboarding, Prototypes</dd>
-                  <dt class="f3 b mt2">Elicitation</dt>
-                  <dd class="f4 ml0">Document Analysis, Focus Groups, Interviews, Observation, Ethonography, Surveys</dd>
+                <dl class="lh-title pa2 pa4-m pa5-l mt0">
+                  <dt class="f4 f3-ns b mt2">Agile</dt>
+                  <dd class="f5 f4-ns ml0">Agile-ish techniques</dd>
+                  <dt class="f4 f3-ns b mt2">Human-Centered Design</dt>
+                  <dd class="f5 f4-ns ml0">Principles and Methods</dd>
+                  <dt class="f4 f3-ns b mt2">Project Management</dt>
+                  <dd class="f5 f4-ns ml0">Prioritization, Coordination, Planning</dd>
+                  <dt class="f4 f3-ns b mt2">Story Mapping</dt>
+                  <dd class="f5 f4-ns ml0">Visual Backlogs</dd>
+                  <dt class="f4 f3-ns b mt2">Value Mapping</dt>
+                  <dd class="f5 f4-ns ml0">Shared Understanding of Value</dd>
+                  <dt class="f4 f3-ns b mt2">Visual Modeling</dt>
+                  <dd class="f5 f4-ns ml0">Wireframing, Whiteboarding, Prototypes</dd>
+                  <dt class="f4 f3-ns b mt2">Elicitation</dt>
+                  <dd class="f5 f4-ns ml0">Document Analysis, Focus Groups, Interviews, Observation, Ethonography, Surveys</dd>
                 </dl>
                 
 			</div>
