--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <body>
 	
     <header class="sans-serif">
-        <div class="cover bg-blue vh-100 vh-75-ns w-100">
+        <div class="cover bg-blue vh-100 vh-75-l w-100">
           
             <nav class="dt w-100 mw8 center"> 
                 <div class="dtc v-mid tl pa3">
