--- a/index.html
+++ b/index.html
@@ -78,20 +78,24 @@
                 <br>
                 
                     <dl class="center mw7 lh-title pa0 ma0">
-                      <dt class="f4 f3-ns b mt2">Agile</dt>
-                      <dd class="f5 f4-ns ml0">Agile-ish techniques</dd>
-                      <dt class="f4 f3-ns b mt2">Human-Centered Design</dt>
-                      <dd class="f5 f4-ns ml0">Principles and Methods</dd>
-                      <dt class="f4 f3-ns b mt2">Project Management</dt>
-                      <dd class="f5 f4-ns ml0">Prioritization, Coordination, Planning</dd>
-                      <dt class="f4 f3-ns b mt2">Story Mapping</dt>
-                      <dd class="f5 f4-ns ml0">Visual Backlogs</dd>
-                      <dt class="f4 f3-ns b mt2">Value Mapping</dt>
-                      <dd class="f5 f4-ns ml0">Shared Understanding of Value</dd>
-                      <dt class="f4 f3-ns b mt2">Visual Modeling</dt>
-                      <dd class="f5 f4-ns ml0">Wireframing, Whiteboarding, Prototypes</dd>
-                      <dt class="f4 f3-ns b mt2">Elicitation</dt>
-                      <dd class="f5 f4-ns ml0">Document Analysis, Focus Groups, Interviews, Observation, Ethonography, Surveys</dd>
+                      <dt class="f4 f3-ns b mt2">Communicating Shared Understanding</dt>
+                      <dd class="f5 f4-ns ml0">presentations, data visualizations, living documents, story mapping, value mapping</dd>
+                      <dt class="f4 f3-ns b mt2">Managing Projects</dt>
+                      <dd class="f5 f4-ns ml0">Scoping projects, organizing backlogs, sprint planning, prioritizing tasks, coordinating work</dd>
+                      <dt class="f4 f3-ns b mt2">Eliciting Stakeholder Requirements</dt>
+                      <dd class="f5 f4-ns ml0">interviews, focus groups, ethnography, observation, surveys, document analysis, active listening, participatory whiteboard sessions</dd>
+                      <dt class="f4 f3-ns b mt2">Facilitating Discussions</dt>
+                      <dd class="f5 f4-ns ml0">project visioning, product roadmapping, goal setting, training workshops</dd>
+                      <dt class="f4 f3-ns b mt2">Analyzing Information</dt>
+                      <dd class="f5 f4-ns ml0">capability assessments, business process analysis, risk assessment, options evaluation, needs analysis, analytical coding</dd>
+                      <dt class="f4 f3-ns b mt2">Conceptual Modeling</dt>
+                      <dd class="f5 f4-ns ml0">User stories, workflow diagrams, data models, wireframes, domain models, user cases</dd>
+                      <dt class="f4 f3-ns b mt2">Working Smarter</dt>
+                      <dd class="f5 f4-ns ml0">human-centered design, agile, behavior-driven design, lean, systems thinking, domain-driven design, grounded theory</dd>
+                      <dt class="f4 f3-ns b mt2">Relationship Building</dt>
+                      <dd class="f5 f4-ns ml0">trust building, conflict resolution, interest-based negotiation</dd>
+                      <dt class="f4 f3-ns b mt2">Self-Managing</dt>
+                      <dd class="f5 f4-ns ml0">proactive initiatives, work delegation, committed deadlines, dependency-awareness, adapting to changes, learning from constructive criticism</dd>
                     </dl>
                 
 			</div>
