minor text edits

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                       <dt class="f4 f3-ns b mt2">Analyzing Information</dt>
                       <dd class="f5 f4-ns ml0">capability assessments, business process analysis, risk assessment, options evaluation, needs analysis, analytical coding</dd>
                       <dt class="f4 f3-ns b mt2">Conceptual Modeling</dt>
-                      <dd class="f5 f4-ns ml0">User stories, workflow diagrams, data models, wireframes, domain models, user cases</dd>
+                      <dd class="f5 f4-ns ml0">User stories, workflow diagrams, data models, wireframes, domain models, use cases</dd>
                       <dt class="f4 f3-ns b mt2">Working Smarter</dt>
                       <dd class="f5 f4-ns ml0">human-centered design, agile, behavior-driven design, lean, systems thinking, domain-driven design, grounded theory</dd>
                       <dt class="f4 f3-ns b mt2">Relationship Building</dt>
@@ -114,7 +114,7 @@
 
         <div class="tc pa0 ma0">
             <p class="lh-copy f6 f5-ns fw3 tracked db pa0 ma0">
-                More Questions? &nbsp;<a class="f5 white-90 underline link dim ma0" href="mailto:ContactMe@SayHelloToBo.com">Ask Me</a>
+                Question? &nbsp;<a class="f5 white-90 underline link dim ma0" href="mailto:ContactMe@SayHelloToBo.com">Ask Me</a>
             </p>
         </div>
 
