organized skills list

--- a/index.html
+++ b/index.html
@@ -78,24 +78,22 @@
                 <br>
                 
                     <dl class="center mw7 lh-title pa0 ma0">
-                      <dt class="f4 f3-ns b mt2">Communicating Shared Understanding</dt>
-                      <dd class="f5 f4-ns ml0">presentations, data visualizations, living documents, story mapping, value mapping</dd>
                       <dt class="f4 f3-ns b mt2">Managing Projects</dt>
-                      <dd class="f5 f4-ns ml0">Scoping projects, organizing backlogs, sprint planning, prioritizing tasks, coordinating work</dd>
-                      <dt class="f4 f3-ns b mt2">Eliciting Stakeholder Requirements</dt>
-                      <dd class="f5 f4-ns ml0">interviews, focus groups, ethnography, observation, surveys, document analysis, active listening, participatory whiteboard sessions</dd>
-                      <dt class="f4 f3-ns b mt2">Facilitating Discussions</dt>
-                      <dd class="f5 f4-ns ml0">project visioning, product roadmapping, goal setting, training workshops</dd>
+                      <dd class="f5 f4-ns ml0">agile techniques, project scopes, organized backlogs, sprint plans, task prioritization, teamwork coordination, budgets</dd>
+                      <dt class="f4 f3-ns b mt2">Eliciting Requirements</dt>
+                      <dd class="f5 f4-ns ml0">interviews, focus groups, ethnography, observation, surveys, document analysis, active listening</dd>
                       <dt class="f4 f3-ns b mt2">Analyzing Information</dt>
-                      <dd class="f5 f4-ns ml0">capability assessments, business process analysis, risk assessment, options evaluation, needs analysis, analytical coding</dd>
+                      <dd class="f5 f4-ns ml0">capability assessments, business process analysis, options evaluation, data analytics, analytical coding</dd>
                       <dt class="f4 f3-ns b mt2">Conceptual Modeling</dt>
-                      <dd class="f5 f4-ns ml0">User stories, workflow diagrams, data models, wireframes, domain models, use cases</dd>
-                      <dt class="f4 f3-ns b mt2">Working Smarter</dt>
-                      <dd class="f5 f4-ns ml0">human-centered design, agile, behavior-driven design, lean, systems thinking, domain-driven design, grounded theory</dd>
+                      <dd class="f5 f4-ns ml0">story maps, user stories, use cases, workflow diagrams, wireframes, domain models</dd>
+                      <dt class="f4 f3-ns b mt2">Communicating Information</dt>
+                      <dd class="f5 f4-ns ml0">value maps, data visualizations, living documents, powerpoint slide decks, workshops, trainings, retrospectives and standups</dd>
+                      <dt class="f4 f3-ns b mt2">Facilitating Shared Understanding</dt>
+                      <dd class="f5 f4-ns ml0">project visioning, product roadmaps, KPIs, goal setting, human-centered design</dd>
                       <dt class="f4 f3-ns b mt2">Relationship Building</dt>
-                      <dd class="f5 f4-ns ml0">trust building, conflict resolution, interest-based negotiation</dd>
+                      <dd class="f5 f4-ns ml0">trust building, conflict resolution, interest-based negotiation, interpersonal skills</dd>
                       <dt class="f4 f3-ns b mt2">Self-Managing</dt>
-                      <dd class="f5 f4-ns ml0">proactive initiatives, work delegation, committed deadlines, dependency-awareness, adapting to changes, learning from constructive criticism</dd>
+                      <dd class="f5 f4-ns ml0">proactive initiatives, committed deadlines, dependency-awareness, adapting to real-time changes</dd>
                     </dl>
                 
 			</div>
