--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                       <dt class="f4 f3-ns b mt2">Eliciting Requirements</dt>
                       <dd class="f5 f4-ns ml0">interviews, focus groups, ethnography, observation, surveys, document analysis, active listening</dd>
                       <dt class="f4 f3-ns b mt2">Analyzing Information</dt>
-                      <dd class="f5 f4-ns ml0">capability assessments, business process analysis, options evaluation, data analytics, analytical coding</dd>
+                      <dd class="f5 f4-ns ml0">stakeholder assessments, business process analysis, options evaluation, data analytics, qualitative data analysis</dd>
                       <dt class="f4 f3-ns b mt2">Conceptual Modeling</dt>
                       <dd class="f5 f4-ns ml0">story maps, user stories, use cases, workflow diagrams, wireframes, domain models</dd>
                       <dt class="f4 f3-ns b mt2">Communicating Information</dt>
