--- a/index.html
+++ b/index.html
@@ -79,17 +79,17 @@
                 
                     <dl class="center mw7 lh-title pa0 ma0">
                       <dt class="f4 f3-ns b mt2">Managing Projects</dt>
-                      <dd class="f5 f4-ns ml0">agile techniques, project scopes, organized backlogs, sprint plans, task prioritization, teamwork coordination, budgets</dd>
+                      <dd class="f5 f4-ns ml0">project scopes, groomed backlogs, sprint plans, task prioritizations, cross-functional teamwork, agile</dd>
                       <dt class="f4 f3-ns b mt2">Eliciting Requirements</dt>
                       <dd class="f5 f4-ns ml0">interviews, focus groups, ethnography, observation, surveys, document analysis, active listening</dd>
                       <dt class="f4 f3-ns b mt2">Analyzing Information</dt>
-                      <dd class="f5 f4-ns ml0">stakeholder assessments, business process analysis, options evaluation, data analytics, qualitative data analysis</dd>
+                      <dd class="f5 f4-ns ml0">stakeholder assessments, business process analysis, requirements analysis, qualitative data analysis</dd>
                       <dt class="f4 f3-ns b mt2">Conceptual Modeling</dt>
                       <dd class="f5 f4-ns ml0">story maps, user stories, use cases, workflow diagrams, wireframes, domain models</dd>
                       <dt class="f4 f3-ns b mt2">Communicating Information</dt>
-                      <dd class="f5 f4-ns ml0">value maps, data visualizations, living documents, powerpoint slide decks, workshops, trainings, retrospectives and standups</dd>
+                      <dd class="f5 f4-ns ml0">living documents, value maps, data visualizations, powerpoint presentations, trainings, coaching</dd>
                       <dt class="f4 f3-ns b mt2">Facilitating Shared Understanding</dt>
-                      <dd class="f5 f4-ns ml0">project visioning, product roadmaps, KPIs, goal setting, human-centered design</dd>
+                      <dd class="f5 f4-ns ml0">project visioning, product roadmaps, KPIs, goal setting, analytics dashboards</dd>
                       <dt class="f4 f3-ns b mt2">Relationship Building</dt>
                       <dd class="f5 f4-ns ml0">trust building, conflict resolution, interest-based negotiation, interpersonal skills</dd>
                       <dt class="f4 f3-ns b mt2">Self-Managing</dt>
