committing legacy changes

--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
     <title>Bo.</title>
 
     <meta name="description" content="Hello, my name is Bo.">
-    <meta name="keywords" content="Bo, Business Analyst, Agile, Story Map, Human Centered Design, User Research, Contractor, Freelancer, App, Design">
+    <meta name="keywords" content="Bo, Product Management, Project Management, Business Analyst, UX, Human Centered Design, User Research, Contractor, Freelancer, App, Design">
     <meta name="viewport" id="viewport" content="initial-scale=1.0, maximum-scale=1.0, user-scalable=no, minimal-ui">
 
     <meta property="og:title" content="Bo.">
     <meta property="og:url" content="https://www.SayHelloToBo.com">
     <meta property="og:type" content="article">
-    <!-- <meta property="og:image" content="https://www.SayHelloToBo.com/images/image.png"> -->
+    <meta property="og:image" content="https://www.SayHelloToBo.com/images/ThisIsBo.png">
     <meta property="og:description" content="Hello, my name is Bo.">
     <meta property="og:site_name" content="Bo.">
     
